--- a/samples/SphereGravity/vc2013/SphereGravity.vcxproj
+++ b/samples/SphereGravity/vc2013/SphereGravity.vcxproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -101,6 +102,7 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup>
+    <ClCompile Include="..\src\Light.cpp" />
     <ClCompile Include="..\src\SphereGravityApp.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\BulletContext.cpp" />
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\Common.cpp" />
@@ -109,6 +111,8 @@
     <ClCompile Include="..\..\..\src\Cinder-Bullet3D\SoftBody.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\Body.h" />
+    <ClInclude Include="..\include\Light.h" />
     <ClInclude Include="..\include\Resources.h" />
     <ClInclude Include="..\..\..\src\BulletPhysics\btBulletCollisionCommon.h" />
     <ClInclude Include="..\..\..\src\BulletPhysics\btBulletDynamicsCommon.h" />
